# ntlm_relay_gat

./: LICENSE.md  README.md  impacket_relay_gat.py  ntlm_relay_gat.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
img/: Thumbs.db
