[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ntlm-relay-gat"
readme ="README.md"
description = "Automatically blast command at all your NTLM relay proxied connections"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "impacket"
]
dynamic = ['version']
license = {text = "MIT License"}
keywords = ["ntlmrelayx", "impacket", "redteam", "pentest"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3"
]

[project.scripts]
ntlm-relay-gat = "src.ntlm_relay_gat:main"

[tool.setuptools.packages.find]
include = ['src']

[tool.setuptools_scm]
# This is so pypi will actually accept the package
local_scheme = "no-local-version"